fix styling on mobile

--- a/src/components/MovieCard/style.css
+++ b/src/components/MovieCard/style.css
@@ -22,3 +22,7 @@
   text-align: center;
   padding: 10px;
 }
+
+.movie-card-button > button {
+  width: 200px;
+}
